--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     
     <body style="background-color: rgb(199, 235, 247)">
         <H1> James Reinhardt's Main Page</H1>
-        <h2> About Me</h2>
+        <h2> About Me:</h2>
         <p>My name is James Reinhardt.  I was born in New York, but I grew up on Vancouver Island.  <br>My hobbie include: working out, eating sushi, and watching movies. I'm really excited to learn about web development this semester! I don't have a lot of experience with programming or web development, but I'm confident I'll be able to pick it up.<br>
         I have a degree in Biology and Psychology from the University of Victoria, but it is challenging to find a job that I am interested in doing, so I decided to come here and learn some useful skills to make myself more competitive. </p>
         <br>
