--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         I have a degree in Biology and Psychology from the University of Victoria, but it is challenging to find a job that I am interested in doing, so I decided to come here and learn some useful skills to make myself more competitive. </p>
         <br>
         <h2>What I look like</h2>
-        <img src="C:\Users\james\webdev\images\profile.jpg"alt="Picture of James" width="210S" height="150">
+        <img src="C:\Users\james\webdev\jamesreinhardt222.github.io\images\profile.jpg"alt="Picture of James" width="210S" height="150">
       
         <H3>My Resume</H3>
       <ul>
@@ -22,7 +22,7 @@
      
       </ul>
       <h3>Here is a list of my courses I'm taking at BCIT</h3>
-      <a href="https://www.bcit.ca"> <img src="C:\Users\james\webdev\images\bcit.png"alt="BCIT logo" width="200S" height="100"></a>
+      <a href="https://www.bcit.ca"> <img src="C:\Users\james\webdev\jamesreinhardt222.github.io\images\bcit.png"alt="BCIT logo" width="200S" height="100"></a>
         <ul>
             <li><a href="https://www.bcit.ca/study/outlines/20193044912"><p>Applied Mathematics</p> </a></li>
             <li><a href="https://www.bcit.ca/study/outlines/20193045300"><p>Biz Analysis and System Design </p> </a></li>
@@ -33,11 +33,11 @@
             <li><a href="https://www.bcit.ca/study/outlines/20193045321"><p>Projects 1</p> </a></li>
         </ul>
 <h3>Click on this button to see funny computer-science cartoons</h3>
-        <a href="funny.html"> <img src="C:\Users\james\webdev\images\clickme.jpeg"alt="Funny Computer Science Cartoons" width="92" height="92">> </a>
+        <a href="funny.html"> <img src="C:\Users\james\webdev\jamesreinhardt222.github.io\images\clickme.jpeg"alt="Funny Computer Science Cartoons" width="92" height="92">> </a>
    
 <h3>
     <a href="card.html">Click here to see a postcard </a> <br>
-    <a href="card.html"> <img src="C:\Users\james\webdev\images\postcard.gif"alt="Funny Computer Science Cartoons" width="92" height="92"></a>
+    <a href="card.html"> <img src="C:\Users\james\webdev\jamesreinhardt222.github.io\images\postcard.gif"alt="Funny Computer Science Cartoons" width="92" height="92"></a>
 </h3>
     </body>
 
