--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         I have a degree in Biology and Psychology from the University of Victoria, but it is challenging to find a job that I am interested in doing, so I decided to come here and learn some useful skills to make myself more competitive. </p>
         <br>
         <h2>What I look like</h2>
-        <img src="images\profile.jpg"alt="Picture of James" width="210S" height="150">
+        <img src="C:\Users\james\webdev\jamesreinhardt222.github.io\images\profile.jpg"alt="Picture of James" width="210S" height="150">
       
         <H3>My Resume</H3>
       <ul>
@@ -22,7 +22,7 @@
      
       </ul>
       <h3>Here is a list of my courses I'm taking at BCIT</h3>
-      <a href="https://www.bcit.ca"> <img src="bcit.png"alt="BCIT logo" width="200S" height="100"></a>
+      <a href="https://www.bcit.ca"> <img src="C:\Users\james\webdev\jamesreinhardt222.github.io\images\bcit.png"alt="BCIT logo" width="200S" height="100"></a>
         <ul>
             <li><a href="https://www.bcit.ca/study/outlines/20193044912"><p>Applied Mathematics</p> </a></li>
             <li><a href="https://www.bcit.ca/study/outlines/20193045300"><p>Biz Analysis and System Design </p> </a></li>
