--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      
       </ul>
       <h3>Here is a list of my courses I'm taking at BCIT</h3>
-      <a href="https://www.bcit.ca"> <img src="C:\Users\james\webdev\jamesreinhardt222.github.io\images\bcit.png"alt="BCIT logo" width="200S" height="100"></a>
+      <a href="https://www.bcit.ca"> <img src="\images\bcit.png"alt="BCIT logo" width="200S" height="100"></a>
         <ul>
             <li><a href="https://www.bcit.ca/study/outlines/20193044912"><p>Applied Mathematics</p> </a></li>
             <li><a href="https://www.bcit.ca/study/outlines/20193045300"><p>Biz Analysis and System Design </p> </a></li>
