--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <li><a href="https://www.bcit.ca/study/outlines/20193045321"><p>Projects 1</p> </a></li>
         </ul>
 <h3>Click on this button to see funny computer-science cartoons</h3>
-        <a href="funny.html"> <img src="images\clickme.jpeg"alt="Funny Computer Science Cartoons" width="92" height="92">> </a>
+        <a href="funny.html"> <img src="images/clickme.jpeg"alt="Funny Computer Science Cartoons" width="92" height="92">> </a>
    
 <h3>
     <a href="card.html">Click here to see a postcard </a> <br>
-    <a href="card.html"> <img src="images\postcard.gif"alt="Funny Computer Science Cartoons" width="92" height="92"></a>
+    <a href="card.html"> <img src="images/postcard.gif"alt="Funny Computer Science Cartoons" width="92" height="92"></a>
 </h3>
     </body>
 
