--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <style>
         	
             .center{
+                text-align:center;
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
@@ -84,7 +85,7 @@
 	}
 </script>
 
-        <H1> James Reinhardt's Main Page</H1>
+        <H1 class="center"> James Reinhardt's Main Page</H1>
         <h2> About Me</h2>
         <p class="resumelink">My name is James Reinhardt.  I was born in New York, but I grew up on Vancouver Island.  <br>My hobbie include: working out, eating sushi, and watching movies. I'm really excited to learn about web development this semester! I don't have a lot of experience with programming or web development, but I'm confident I'll be able to pick it up.<br>
         I have a degree in Biology and Psychology from the University of Victoria. </p>
