--- a/card.html
+++ b/card.html
@@ -7,7 +7,7 @@
     </head>
     <body style= "background-color: rgb(107, 178, 245);">
             <h1 style="color:rgb(151, 108, 15); font-family:cursive ">Having a great time without you!</h1>
-    <img src="C:\Users\james\OneDrive\Desktop\images\beach.gif"><br>
+    <img src="images/beach.gif"><br>
     <h2 style="color:rgb(15, 151, 67); font-family:sans-serif ">From James</h1> <br>
     
         <a href="index.html"><p>Click here to go back to the homepage.</p> </a>
