--- a/funny.html
+++ b/funny.html
@@ -6,9 +6,9 @@
     <body style ="background-color:khaki">
         <h1>Funny Computer Science Cartoons</h1>
             <ul>
-                    <li><img src= "\images\bully.jpg" height="200" width=200> </li>
-                    <li><img src="\images\job_interview.jpg" height="200" width=200> </li>
-                    <li><img src="\images\microsoft.jfif" height="200" width=350> </li>
+                    <li><img src= "images/bully.jpg" height="200" width=200> </li>
+                    <li><img src="images/job_interview.jpg" height="200" width=200> </li>
+                    <li><img src="images/microsoft.jfif" height="200" width=350> </li>
                 </ul>
 
                 <a href="index.html"><p>Click here to go back to the homepage.</p> </a>
