--- a/mainpage.html
+++ b/mainpage.html
@@ -17,7 +17,7 @@
 <div style="background:rgb(112, 10, 10)">
             <ul class="nav nav-tabs">
                     <li class="nav-item">
-                      <a class="nav-link active" href="signedin.html">Homepage</a>
+                      <a class="nav-link active" href="#">Homepage</a>
                     </li>
                     <li class="nav-item dropdown pill-color">
                       <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Find your restaurant</a>
@@ -48,13 +48,13 @@
     <h1>J Bros Restaurant App</h1>
 </div>
 <div class="outer"><div class="sphere"><p>Stop waiting for waiters</p></div></div>
-<div class="outer"><a href="login.html"><div class=signinbutton><p class="signin">sign in</p></div></a></div>
+<div class="outer"><a href="login.html"><div class=signinbutton><p class="signin">Sign In</p></div></a></div>
 </div>
 
 <div class="outer">
     <a href="searchallrestaurants.html">
         <div class=signinbutton>
-            <p class="signin">Find a restaurant</p>
+            <p class="signin">Find a Restaurant</p>
         </div>
     </a>
 </div>
