--- a/thankyou.html
+++ b/thankyou.html
@@ -70,7 +70,7 @@
   
 
 
-<div class="outer"><a href="file:///C:/Users/james/group13/jamespages/signedin.html"><div class=signinbutton><p class="signin">Click here to go back to the main page</p></div></a></div>
+<div class="outer"><a href="signedin.html"><div class=signinbutton><p class="signin">Click here to go back to the main page</p></div></a></div>
 
 <script>
   var name = localStorage.getItem("name")
