--- a/final draft/index.html
+++ b/final draft/index.html
@@ -53,7 +53,7 @@
         <h1>Welcome</h1>
     <h2>to the</h2>
     <h1>J Bros Restaurant App</h1>
-    <h1 id="username"></h1>
+    <h1 id="username" class="logged-in"></h1>
 </div>
 <div class="outer"><div class="sphere"><p>Stop waiting for waiters</p></div></div>
 <div class="outer"><a href="login.html"><div class=signinbutton><p class="signin">Sign In</p></div></a></div>
