--- a/final_project/table_details.html
+++ b/final_project/table_details.html
@@ -123,7 +123,6 @@
 
 <div class="outer">
   <div class="mainheader">
-        <h1>Account</h1>
         <h1 id="username"></h1>
   </div>
 
@@ -143,7 +142,7 @@
   </div></div>
 
   <div class="outer">
-      <a href="signedin.html">
+      <a href="index.html">
           <div class=signinbutton>
               <p class="signin">Back to Main Page</p>
           </div>
