--- a/final_project/tabledetails.html
+++ b/final_project/tabledetails.html
@@ -65,6 +65,16 @@
     </div>
 
     <div class="outer">
+        <a href="yourreservation.html">
+            <div class=signinbutton>
+                <br>
+                <p class="signin">your reservation</p>
+            </div>
+        </a>
+
+    </div>
+
+    <div class="outer">
         <a href="index.html">
             <div class=signinbutton>
                 <br>
