--- a/final_project/index.html
+++ b/final_project/index.html
@@ -60,7 +60,7 @@
 </div>
 
 <div class="outer">
-    <a href="searchallrestaurants.html">
+    <a href="name.html">
         <div class=signinbutton>
             <p class="signin">Find a Restaurant</p>
         </div>
