--- a/final_project/syncyourtable.html
+++ b/final_project/syncyourtable.html
@@ -57,7 +57,7 @@
 </div>
 
 <div class="outer">
-  <a href="mainpage.html">
+  <a href="index.html">
       <div class=signinbutton>
           <p class="signin">Back to Main Page</p>
       </div>
