--- a/final_project/index.html
+++ b/final_project/index.html
@@ -56,12 +56,12 @@
     <h1 id="username" class="logged-in" style="display: none"></h1>
 </div>
 <div class="outer"><div class="sphere"><p>J Bros</p></div></div>
-<div class="outer"><a href="login.html"><div class=signinbutton><p class="signin">Sign In</p></div></a></div>
+<div class="outer"><a href="login.html"><div class= "logged-out signinbutton"><p class="signin">Sign In</p></div></a></div>
 </div>
 
 <div class="outer">
     <a href="name.html">
-        <div class=signinbutton>
+        <div class="signinbutton">
             <p class="signin">Find a Restaurant</p>
         </div>
     </a>
