--- a/final_project/index.html
+++ b/final_project/index.html
@@ -62,7 +62,7 @@
 <div class="outer">
     <a href="name.html">
         <div class="signinbutton">
-            <p class="signin">Find a Restaurant</p>
+            <p class="signin logged-in">Find a Restaurant</p>
         </div>
     </a>
 </div>
