--- a/final_project/index.html
+++ b/final_project/index.html
@@ -61,8 +61,8 @@
 
 <div class="outer">
     <a href="name.html">
-        <div class="signinbutton">
-            <p class="signin logged-in">Find a Restaurant</p>
+        <div class="signinbutton logged-in">
+            <p class="signin">Find a Restaurant</p>
         </div>
     </a>
 </div>
