--- a/final_project/tabledetails.html
+++ b/final_project/tabledetails.html
@@ -51,14 +51,14 @@
 <body>
 
 
-    <h1>Your Table Number</h1>
-    <h2 id="tableNum"></h2>
+    <h1>Table Number </h1>
+    &nbsp;<h1 id="tableNum"></h1>
 
     <div class="outer">
         <a href="servernotified.html">
             <div class=signinbutton>
                 <br>
-                <p class="signin">Notify Your Server</p>
+                <p class="signin">Notify your Server</p>
             </div>
         </a>
 
@@ -68,7 +68,7 @@
         <a href="yourreservation.html">
             <div class=signinbutton>
                 <br>
-                <p class="signin">your reservation</p>
+                <p class="signin">Your Reservation</p>
             </div>
         </a>
 
@@ -78,7 +78,7 @@
         <a href="index.html">
             <div class=signinbutton>
                 <br>
-                <p class="signin">Back to Main Page</p>
+                <p class="signin">Main Page</p>
             </div>
         </a>
 
