--- a/final_project/index.html
+++ b/final_project/index.html
@@ -55,8 +55,11 @@
     <h1>J Bros Restaurant App</h1>
     <h1 id="username" class="logged-in" style="display: none"></h1>
 </div>
-<div class="outer"><div class="sphere"><p>J Bros</p></div></div>
-<div class="outer"><a href="login.html"><div class= "logged-out signinbutton"><p class="signin">Sign In</p></div></a></div>
+<div class="outer">
+  <div class="sphere">
+      <br>
+      <p>J Bros</p>
+  </div>
 </div>
 
 <div class="outer">
