--- a/index.html
+++ b/index.html
@@ -1,69 +1,56 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Main Page</title>
-
-    <!-- Making sure it's mobile friendly -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <link rel="stylesheet" type="text/css" href="style.css">
-
-
-<div style="background:rgb(112, 10, 10)">
-            <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                      <a class="nav-link active" href="signedin.html">Homepage</a>
-                    </li>
-                    <li class="nav-item dropdown pill-color">
-                      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Find your restaurant</a>
-                      <div class="dropdown-menu">
-                        <a class="dropdown-item" href="searchbylocation.html">By location</a>
-                        <a class="dropdown-item" href="searchbyname.html">By name</a>
-                        <a class="dropdown-item" href="searchallrestaurants.html">See all restaurants</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="reservation.html">Reserve a table</a>
-                      </div>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link pill-color" href="syncyourtable.html">Sync your table</a>
-                    </li>
-                    <li class="nav-item">
-                            <a class="nav-link active" href="login.html">Sign in</a>
-                          </li>
-                  </ul>
-
-                </div>
-
+    <title>James' Page</title>
 </head>
 <body>
+    <h1>My Embarrassingly simple website.</h1>
+    <aside>But sometimes less is more</aside>
 
-<div class="outer">
-        <h1>Welcome</h1>
-    <h2>to the</h2>
-    <h1>J Bros Restaurant App</h1>
-</div>
-<div class="outer"><div class="sphere"><p>Stop waiting for waiters</p></div></div>
-<div class="outer"><a href="login.html"><div class=signinbutton><p class="signin">sign in</p></div></a></div>
-</div>
+<h2>Who am I?</h2>
+<ul>
+    <li>BCIT Computer Systems Technology Student.</li>
+    <li>Raised in a small town on vancouver island.</li>
+    <li>love ice cream.</li>
+</ul>
 
-<div class="outer">
-    <a href="searchallrestaurants.html">
-        <div class=signinbutton>
-            <p class="signin">Find a restaurant</p>
-        </div>
-    </a>
-</div>
+<h2>What do I bring to the table?</h2>
+
+<ul>
+    <li>Strong writing skills</li>
+    <li>Object-oriented programming with java</li>
+    <li>Procedural programming with C and Python</li>
+    <li>Database manipulation with SQL and firebase</li>
+    <li>Bootstrap, css, and javascript</li>
+    <li>Teaching myself React and Mongo DB via Udemy</li>
+</ul>
+
+<h2>Why am I valuable?</h2>
+<p>I like to challenge old ways of thinking and bring in new ideas to make everything more efficient.
+</p>
 
 
- <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<h2>Projects</h2>
+<p>I'm going to make an actual website with images and links to my projects, but for now I'll just provide descriptions.</p>
+<ul>
+    <li>Single user text-based dungeon adventure game</li>
+    <li>Hangman Game</li>
+    <li>Shoot the zombie!!</li>
+    <li>Java aquatic ecosystem simulation</li>
+</ul>
+
+<h2>My back-story</h2>
+<p>Every hero needs an origin story.</p>
+<p>I graduated from the university of Victoria with a degree in Biopsychology.  I wanted to go into medical school, so I tried to be really well
+    rounded, taking extra courses in philosophy, biochemistry, and genetics.
+</p>
+<p>After voluneering in a hospital and a psych ward, I decided the medical route wasn't for me.  I wanted something less depressing and more creative.
+</p>
+<p>I worked in a homeless shelter for a bit, and that was a crazy experience.  I learned a lot about how cruel life can be.</p>
+<h2>Blue Coast Research</h2>
+<p>My first taste of software engineering was at BlueCoast Research.</p>
+    
 </body>
 </html>
